[package]
name = "pds-netanalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "packet_swiffer"
#path = "src/lib/lib.rs"

[dependencies]
dns-parser = "0.8.0"
timer = "0.2.0"
chrono = "0.4.22"
pcap = "0.11.0"
pktparse = "0.7.1"
clap = { version = "4.0.27", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
csv = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }