[package]
name = "pds-netanalyzer"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
name = "netanalyzer"
path = "src/lib/lib.rs"


[dependencies]
colored = "2.0.0"
pcap = "1.0.0"
pktparse = "0.7.1"
chrono = "0.4.23"
dns-parser = "0.8.0"
timer = "0.2.0"
clap = { version = "4.0.27", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
csv = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }
